--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,15 +2,20 @@ version: '3'
 services:
   postgres:
     image: 'postgres:latest'
+    environment:
+      - POSTGRES_PASSWORD=postgres_password
   redis:
     image: 'redis:latest'
   nginx:
+    depends_on:
+      - api
+      - client
     restart: always
     build:
       dockerfile: Dockerfile.dev
       context: ./nginx
     ports:
-    - '3050:80'
+      - '3050:80'
   api:
     build:
       dockerfile: Dockerfile.dev
@@ -27,6 +32,7 @@ services:
       - PGPASSWORD=postgres_password
       - PGPORT=5432
   client:
+    stdin_open: true
     build:
       dockerfile: Dockerfile.dev
       context: ./client
@@ -39,4 +45,7 @@ services:
       context: ./worker
     volumes:
       - /app/node_modules
-      - /.worker:/app
+      - ./worker:/app
+    environment:
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
