--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ services:
 before_install:
   - docker build -t segyhp/react-test -f ./client/Dockerfile.dev ./client
 script:
-  - docker run segyhp/react-test npm test -- --coverage
+  - docker -e CI=true run segyhp/react-test npm test -- --coverage
 after_success:
   - docker build -t segyhp/complex-client ./client
   - docker build -t segyhp/complex-server ./server
